--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Is Gold a Safe Haven Investment? Here’s What the Data Says</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 05.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -893,7 +893,7 @@
                     <div class="video-info">
                         <h3>Why You Need to Be Bored</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1696,7 +1696,7 @@
                     <div class="video-info">
                         <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Is Gold a Safe Haven Investment? Here’s What the Data Says</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 05.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8195,7 +8195,7 @@
                         <div class="video-info">
                             <h3>Why You Need to Be Bored</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9549,7 +9549,7 @@
                         <div class="video-info">
                             <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
